<resources>
    <string name="app_name">Jokes</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_joke">JokeActivity</string>
    <string name="title_activity_name">NameActivity</string>
    <string name="title_activity_category">CategoryActivity</string>

    <!-- Main Activity -->
    <string name="error">Error</string>
    <string name="error_tablet">Application only supports mobile phones.</string>
    <string name="error_no_internet">No internet connection.</string>
    <string name="random_joke">Random Joke</string>
    <string name="name_joke">Name Joke</string>
    <string name="category_joke">Category Joke</string>

    <!-- Name Dialog Activity -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="go">Go</string>
    <string name="empty_first_name">Empty First Name</string>
    <string name="empty_last_name">Empty Last Name</string>

    <!-- Category Dialog Activity -->
    <string name="explicit">Explicit</string>
    <string name="nerdy">Nerdy</string>

</resources>
