<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radioGroupCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rbtnExplicit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textSize="14sp"
            android:button="@drawable/radiobutton_selector"
            android:textColor="@color/grey"
            android:layout_margin="15dp"
            android:text="@string/explicit"/>

        <RadioButton
            android:id="@+id/rbtnNerdy"
            android:layout_margin="15dp"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:button="@drawable/radiobutton_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nerdy" />
    </RadioGroup>

    <Button
        android:id="@+id/btnGoCategory"
        style="@style/CustomStyleButtonCurveBlue"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:text="@string/go"
        android:layout_gravity="right"
        android:layout_margin="10dp" />

</LinearLayout>